--- a/ObjC/Model-View-Controller-Service/Singleton.xctemplate/TemplateInfo.plist
+++ b/ObjC/Model-View-Controller-Service/Singleton.xctemplate/TemplateInfo.plist
@@ -2,30 +2,23 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>AllowedTypes</key>
-	<array>
-		<string>public.objective-c-source</string>
-		<string>public.objective-c-plus-plus-source</string>
-	</array>
 	<key>DefaultCompletionName</key>
-	<string>ZYSPSomeViewController</string>
+	<string>ZYSPSomeView</string>
 	<key>Description</key>
-	<string>UIViewController子类</string>
+	<string>UIView 模版</string>
 	<key>Kind</key>
-	<string>Xcode.IDEKit.TextSubstitutionFileTemplateKind</string>
-	<key>MainTemplateFile</key>
-	<string>___FILEBASENAME___.m</string>
+	<string>Xcode.IDEFoundation.TextSubstitutionFileTemplateKind</string>
 	<key>Options</key>
 	<array>
 		<dict>
 			<key>Description</key>
-			<string>类名</string>
+			<string>The name of the class to create</string>
 			<key>Identifier</key>
 			<string>productName</string>
 			<key>Name</key>
-			<string>Class</string>
+			<string>Class:</string>
 			<key>NotPersisted</key>
-			<false/>
+			<true/>
 			<key>Required</key>
 			<true/>
 			<key>Type</key>
@@ -33,29 +26,44 @@
 		</dict>
 		<dict>
 			<key>Default</key>
-			<string>UIViewController</string>
+			<string>UIView</string>
 			<key>Description</key>
 			<string>继承谁</string>
+			<key>FallbackHeader</key>
+			<string>#import "CommonUI.h"</string>
 			<key>Identifier</key>
-			<string>cocoaTouchSubclass</string>
+			<string>cocoaSubclass</string>
 			<key>Name</key>
-			<string>Subclass of</string>
+			<string>Subclass of:</string>
+			<key>NotPersisted</key>
+			<true/>
 			<key>Required</key>
 			<true/>
 			<key>Suffixes</key>
 			<dict>
-				<key>UITableViewController</key>
-				<string>ListController</string>
-				<key>UIViewController</key>
-				<string>ViewController</string>
+				<key>UIView</key>
+				<string>View</string>
 			</dict>
 			<key>Type</key>
 			<string>class</string>
 			<key>Values</key>
 			<array>
-				<string>UIViewController</string>
-				<string>UITableViewController</string>
+				<string>UIView</string>
 			</array>
+		</dict>
+		<dict>
+			<key>Default</key>
+			<string>true</string>
+			<key>Description</key>
+			<string>是否创建同名 XIB 文件</string>
+			<key>Identifier</key>
+			<string>XIB</string>
+			<key>Name</key>
+			<string>创建 XIB？</string>
+			<key>NotPersisted</key>
+			<true/>
+			<key>Type</key>
+			<string>checkbox</string>
 		</dict>
 	</array>
 	<key>Platforms</key>
@@ -63,6 +71,8 @@
 		<string>com.apple.platform.iphoneos</string>
 	</array>
 	<key>SortOrder</key>
-	<string>10</string>
+	<string>20</string>
+	<key>Summary</key>
+	<string>UIView 模版</string>
 </dict>
 </plist>
