--- a/ObjC/Model-View-Controller-Service/NibOfView.xctemplate/TemplateInfo.plist
+++ b/ObjC/Model-View-Controller-Service/NibOfView.xctemplate/TemplateInfo.plist
@@ -19,6 +19,6 @@
 	<key>Summary</key>
 	<string>An Interface Builder document for creating a Cocoa view</string>
 	<key>Title</key>
-	<string>Nib View Template</string>
+	<string>Nib of View Templates</string>
 </dict>
 </plist>
