--- a/ObjC/Model-View-Controller-Service/Service.xctemplate/TemplateInfo.plist
+++ b/ObjC/Model-View-Controller-Service/Service.xctemplate/TemplateInfo.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>DefaultCompletionName</key>
-	<string>ZYSPSomeView</string>
+	<string>MyService</string>
 	<key>Description</key>
-	<string>UIView 模版</string>
+	<string>服务</string>
 	<key>Kind</key>
 	<string>Xcode.IDEFoundation.TextSubstitutionFileTemplateKind</string>
 	<key>Options</key>
@@ -26,11 +26,9 @@
 		</dict>
 		<dict>
 			<key>Default</key>
-			<string>UIView</string>
+			<string>NSObject</string>
 			<key>Description</key>
-			<string>继承谁</string>
-			<key>FallbackHeader</key>
-			<string>#import "CommonUI.h"</string>
+			<string>父类</string>
 			<key>Identifier</key>
 			<string>cocoaSubclass</string>
 			<key>Name</key>
@@ -41,29 +39,15 @@
 			<true/>
 			<key>Suffixes</key>
 			<dict>
-				<key>UIView</key>
-				<string>View</string>
+				<key>NSObject</key>
+				<string>Service</string>
 			</dict>
 			<key>Type</key>
 			<string>class</string>
 			<key>Values</key>
 			<array>
-				<string>UIView</string>
+				<string>NSObject</string>
 			</array>
-		</dict>
-		<dict>
-			<key>Default</key>
-			<string>true</string>
-			<key>Description</key>
-			<string>是否创建同名 XIB 文件</string>
-			<key>Identifier</key>
-			<string>XIB</string>
-			<key>Name</key>
-			<string>创建 XIB？</string>
-			<key>NotPersisted</key>
-			<true/>
-			<key>Type</key>
-			<string>checkbox</string>
 		</dict>
 	</array>
 	<key>Platforms</key>
@@ -73,6 +57,6 @@
 	<key>SortOrder</key>
 	<string>20</string>
 	<key>Summary</key>
-	<string>UIView 模版</string>
+	<string>ViewService templates</string>
 </dict>
 </plist>
