--- a/ObjC/Model-View-Controller-Service/View.xctemplate/TemplateInfo.plist
+++ b/ObjC/Model-View-Controller-Service/View.xctemplate/TemplateInfo.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>DefaultCompletionName</key>
-	<string>ZYSPSomeView</string>
+	<string>MyView</string>
 	<key>Description</key>
-	<string>UIView 模版</string>
+	<string>视图</string>
 	<key>Kind</key>
 	<string>Xcode.IDEFoundation.TextSubstitutionFileTemplateKind</string>
 	<key>Options</key>
@@ -28,9 +28,7 @@
 			<key>Default</key>
 			<string>UIView</string>
 			<key>Description</key>
-			<string>继承谁</string>
-			<key>FallbackHeader</key>
-			<string>#import "CommonUI.h"</string>
+			<string>父类</string>
 			<key>Identifier</key>
 			<string>cocoaSubclass</string>
 			<key>Name</key>
@@ -73,6 +71,6 @@
 	<key>SortOrder</key>
 	<string>20</string>
 	<key>Summary</key>
-	<string>UIView 模版</string>
+	<string>UIView templates</string>
 </dict>
 </plist>
