--- a/ObjC/Model-View-Controller-Service/View.xctemplate/TemplateInfo.plist
+++ b/ObjC/Model-View-Controller-Service/View.xctemplate/TemplateInfo.plist
@@ -30,7 +30,7 @@
 			<key>Description</key>
 			<string>父类</string>
 			<key>Identifier</key>
-			<string>cocoaSubclass</string>
+			<string>cocoaTouchSubclass</string>
 			<key>Name</key>
 			<string>Subclass of:</string>
 			<key>NotPersisted</key>
@@ -53,11 +53,11 @@
 			<key>Default</key>
 			<string>true</string>
 			<key>Description</key>
-			<string>是否创建同名 XIB 文件</string>
+			<string>Whether to create a XIB file with the same name</string>
 			<key>Identifier</key>
 			<string>XIB</string>
 			<key>Name</key>
-			<string>创建 XIB？</string>
+			<string>need nib?</string>
 			<key>NotPersisted</key>
 			<true/>
 			<key>Type</key>
