Mvcs文件夹下的都测试完毕

--- a/ObjC/Model-View-Controller-Service/Controller.xctemplate/TemplateInfo.plist
+++ b/ObjC/Model-View-Controller-Service/Controller.xctemplate/TemplateInfo.plist
@@ -63,6 +63,13 @@
 			<true/>
 			<key>Type</key>
 			<string>checkbox</string>
+			<key>Options</key>
+			<dict>
+				<key>cocoaTouchSubclass</key>
+				<array>
+					<string>UIViewController</string>
+				</array>
+			</dict>
 		</dict>
 	</array>
 	<key>Platforms</key>
