--- a/ObjC/Model-View-Controller-Service/View.xctemplate/TemplateInfo.plist
+++ b/ObjC/Model-View-Controller-Service/View.xctemplate/TemplateInfo.plist
@@ -2,12 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>AllowedTypes</key>
+	<array>
+		<string>public.objective-c-source</string>
+		<string>public.objective-c-plus-plus-source</string>
+	</array>
 	<key>DefaultCompletionName</key>
 	<string>MyView</string>
 	<key>Description</key>
 	<string>视图</string>
 	<key>Kind</key>
 	<string>Xcode.IDEFoundation.TextSubstitutionFileTemplateKind</string>
+	<key>MainTemplateFile</key>
+	<string>___FILEBASENAME___.m</string>
 	<key>Options</key>
 	<array>
 		<dict>
